# tensorflowCC_infer_aync

./: CMakeLists.txt  README.md
saved_model_bs5/: saved_model.pb
saved_model_bs5/variables/: variables.index
src/: main.cpp
src/detection/: detection.cpp  detection.h  videoIO.cpp  videoIO.h
